apps/base/haste-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haste-server
  namespace: haste-server
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    gethomepage.dev/description: Hastebin/Pastebin fork
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - haste.bacherik.de
    secretName: haste-server-tls
  rules:
  - host: "haste.bacherik.de"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: haste-server
            port:
              number: 80
